tests/lit/syntax/error_bad_return_elif.silly
// RUN: cd %S
// RUN: %Not %ExeSilly -g error_bad_return_elif.silly -o %t.exe 2>&1 | %FileCheck %s
// CHECK: error_bad_return_elif.silly:13:5: error: RETURN is not currently allowed in a ELIF block
// CHECK:    13 |     RETURN 0;
// CHECK:       |     ^

IF (1 EQ 0)
{
    PRINT "hi";
}
ELIF (1 EQ 1)
{
    RETURN 0;
};
